sites/all/themes/lacuna_stories/sass/components/views.scss
@import "init";
/* Hide "Operations" text in Sewing Kit */
.vbo-views-form form div fieldset.container-inline legend span.fieldset-legend {
  display: none;
}

/* Theme the select list for adding to a thread */
select#edit-thread-add {
  width: 268px;
  padding: 5px;
  font-size: 16px;
  line-height: 1;
  border: 0;
  border-radius: 0;
  height: 34px;
}

/* VBO styling */
div.view {
  div.vbo-views-form {
    fieldset.container-inline {
      border: 0;
    }
  }
  .views-widget-filter-created,
  .views-widget-filter-created_1 {
    display: none;
  }
  /*
  .fieldset-wrapper {
    margin-left: 33%;
  } */
  input[id^='edit-actionsewing-kit-stitch'],
  input[id^='edit-actionviews-data-export-action-csv-export'],
  input[id^='edit-actionlacuna-lti-resource-add']
  {
    width: auto;
    display: inline-block;
    height: 50px;
    font-size: 14pt;
  }
  .chosen-container {
    max-width: 60% !important;
    width: 200px !important;
  }
  .views-exposed-form {
    label {
      width: 16%;
    }
  }
  td.views-field-views-bulk-operations .form-type-radio {
    margin-left: 5px;
    margin-right: 5px;
  }
}

div.view-list-resource-list {
  th.views-field-field-image {
    width: 50px;
  }
}

/* Remove from thread view block */
h2#stitchings {
  text-align: center;
}
div#block-views-stitchings-block-1,
div.view-stitchings {
  margin-left: 5%;
  margin-right: 5%;
  /*.fieldset-wrapper {
    text-align: center;
  }*/
  th.views-field-views-bulk-operations {
    div.form-type-checkbox {
      margin-left: 0em !important;
      margin-right: 0em !important;
    }
  }
  div.tabledrag-toggle-weight-wrapper {
    display: none;
  }
  fieldset#edit-select {
    border: none;
    margin-left: 5em;
    input[id^='edit-actionsewing-kit-remove'] {
      width: auto;
      height: 35px;
      font-size: 10pt;
      position: relative;
      top: 25px;
      left: -45.2%;
    }
  }
  td.views-field-views-bulk-operations {
    min-width: 50px;
    input.vbo-select.form-checkbox {
      display: block;
      float: right;
      margin-right: 40%;
      position: relative;
      top: -50%;
      -webkit-transform: translateY(50%);
      -o-transform: translateY(50%);
      -moz-transform: translateY(50%);
      -ms-transform: translateY(50%);
      transform: translateY(50%);
    }
    div.handle {
      margin: 0;
      position: relative;
    }
    div.form-item.form-type-checkbox {
      float: right;
    }
  }
}

/* Centers the Add to Thread & Remove From Thread buttons*/
.vbo-views-form .container-inline.form-wrapper {
  .fieldset-wrapper {
    text-align: center;
  }
}


/* Center the "Select all" options */
.vbo-fieldset-select-all {
  margin-right: auto;
  margin-left: auto;
}

.views-field-biblio-url {
  margin-top: 5px;
  margin-bottom: 5px;
}

/* Arrange topic view */
.view-topics .view-content div {
  height: 200px;
}

.views-row-odd span.views-field-field-image div.topic_image {
  float: left;
  padding-right: 20px;
}

div.views-row-even span.views-field-field-image div.topic_image {
  float: right;
  padding-left: 20px;
}

div.views-row-last span.views-field-field-image div.topic_image  {
  float: right;
  padding-left: 20px;
}

.views-exposed-form .views-exposed-widget{
  clear: both;
  width: 100%;
}

.views-exposed-form .views-exposed-widget label {
  min-width: 180px;
}

/* View-specific theming, for Materials, Responses, Threads */
$views-link-color: #808080;
$views-link-hover-color: #1588BA;
.view-documents,
.view-responses,
.view-threads,
.view-sewing-kit,
.view-my-content,
.view-all-content,
.view-all-annotations {
  .views-submit-button,
  .views-widget-sort-order {
    display: none;
  }
  .views-widget-sort-by {
    //.form-type-bef-link {
      float: left;
      margin: 0 10px 0 15px;
      a {
        color: $views-link-color;
        font-weight: bold;
        font-size: 15px;
      }
      a:hover {
        color: $views-link-hover-color;
      }
    //}
    //.form-type-bef-link.selected a {
    //  color: $views-link-hover-color;
    //}
  }
  img {
    width: auto;
    height: auto;
    max-width: 100%;
    max-height: 100%;
    box-shadow: 0px 0px 10px #888888;
  }
  .views-row {
    float: left;
    width: 150px;
    margin: 20px 20px 65px 20px;
    height: 350px;
  }
  .views-exposed-widget {
    margin-top: 0px;
  }
  .views-exposed-widget>label,
  .form-item-sort-by>label  {
    float: left;
    margin-right: 10px;
  }

  .form-type-bef-checkbox {
    float: left;
    margin: 0px 5px 0px 10px;
    font-size: 0.95em;
    color: grey;
  }
  .view-content h3 {
    display: inline-block;
    width: 100%;
    padding-top: 25px;
  }
}

.view-responses {
  .views-field-realname {
  a {
    color: #94b725; 
  }
  a:hover {
    color: #a5cc29;
  }
  }
  .views-field-created {
    .field-content {
      display: block;
    }
  }
  .views-field-field-image {
    img {
      opacity: 0.9;
      -webkit-transition: opacity 0.3s ease;
      -moz-transition: opacity 0.3s ease;
      -o-transition: opacity 0.3s ease;
      transition: opacity 0.3s ease;
    }
    img:hover {
      opacity: 1.0;
    }
  }
}

.view-documents {
  .views-field-field-image {
    img {
      opacity: 0.9;
      -webkit-transition: opacity 0.3s ease;
      -moz-transition: opacity 0.3s ease;
      -o-transition: opacity 0.3s ease;
      transition: opacity 0.3s ease;
    }
    img:hover {
      opacity: 1.0;
    }
  }
}


.view-documents #edit-reset.form-submit,
.view-responses #edit-reset.form-submit{
  margin-top: 0px;
  margin-right: 80px;
}
.view-courses {
  li.views-fluid-grid-item {
    width: 32%;
  }
  div.views-fluid-grid h3 {
    text-align: left;
  }
}

/* enables horizontal scrolling for table*/
.view-content {
  overflow: auto;
} 

table.views-table {
  width: 100%;
  font-family: $base-font-family;
}

.views-table tr {
  text-align: left;
  overflow-x: auto;
}
/* ... */

